--- a/index.html
+++ b/index.html
@@ -3,119 +3,206 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <!-- Font Awesome -->
+  <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-a11y="true"></script>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style/styles.css">
   
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
   <div class="container">
-    <div class="header">
+
+    <section class="header">
       <div class="navbar-wrapper">
         <img src="images/logo.svg" alt="logo" class="logo">
-        <nav>
+        <nav class="navbar">
           <ul>
-            <li><a class="active" href="#features">Features</a></li>
-            <li><a href="#teams">Teams</a></li>
-            <li><a href="#sign-in">Sign In</a></li>
+            <li><a class="navbar-link" href="#features">Features</a></li>
+            <li><a class="navbar-link" href="#teams">Teams</a></li>
+            <li><a class="navbar-link" href="#sign-in">Sign In</a></li>
           </ul>
         </nav>
-
       </div>
 
-    </div>
+      <div class="intro">
+        <img src="images/illustration-intro.png" alt="presentation">
+        <h2>All your files in one secure location, accessible anywhere.</h2>
+        <p>  
+          Fylo stores all your most important files in one secure location. Access them wherever 
+          you need, share and collaborate with friends family, and co-workers.
+        </p>
+      </div>
+      <div class="button">
+        <a href="#" class="btn">Get Started</a>
+      </div>
+    </section>
+
+    <!-- Features -->
+
+    <section class="features">
+      <div class="features-item">
+        <img src="images/icon-access-anywhere.svg" alt="access-file">
+        <h2> Access your files, anywhere</h2>
+        <p>
+          The ability to use a smartphone, tablet, or computer to access your account means your 
+          files follow you everywhere.
+        </p>
+      </div>
+      <div class="features-item">
+        <img src="images/icon-security.svg" alt="icon">
+        <h2>Security you can trust</h2>
+        <p>
+          2-factor authentication and user-controlled encryption are just a couple of the security 
+          features we allow to help secure your files.
+        </p>
+      </div>
+      <div class="features-item">
+        <img src="images/icon-collaboration.svg" alt="icon">
+        <h2>Real-time collaboration</h2>
+        <p>
+          Securely share files and folders with friends, family and colleagues for live collaboration. 
+          No email attachments required.        
+        </p>
+      </div>
+      <div class="features-item">
+        <img src="images/icon-any-file.svg" alt="icon">
+        <h2>Store any type of file</h2>
+        <p>
+          Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+          file types to be securely stored and shared.        
+        </p>
+      </div>
+    </section>
+
+    <!-- Fonctionnality -->
+    <section class="fonction">
+      <div class="fonction-item-1">
+      <img src="images/illustration-stay-productive.png" alt="productive">
+      </div>
+      <div class="fonction-item-2">
+        <h2>Stay productive, wherever you are </h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+          storage needs.<br>
+        
+          Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+          attachments required.
+        </p>
+        <a href="#">See how Fylo works</a>
+      </div>
+
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <!-- Testimonials 1 -->
+      <div class="testimonials-1">
+        <div class="testimonials-body">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.
+          </p>
+        </div>
+        <div class="profile">
+          <img src="images/profile-1.jpg" alt="profile">
+          <div class="profile-titre">
+            <h3>Satish Patel</h3>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+      <!-- Testimonials 2 -->
+      <div class="testimonials-2">
+        <div class="testimonials-body">
+          <p>          
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.
+          </p>
+        </div>
+        <div class="profile">
+          <img src="images/profile-2.jpg" alt="profile">
+          <div class="profile-titre">
+            <h3>Bruce McKenzie</h3>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+      <!-- Testimonials 3 -->
+      <div class="testimonials-3">
+        <div class="testimonials-body">
+          <p>          
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.
+          </p>
+        </div>
+        <div class="profile">
+          <img src="images/profile-3.jpg" alt="profile">
+          <div class="profile-titre">
+            <h3>Iva Boyd</h3>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+    
+    </section>
+    <!-- Get Started Section -->
+    <section class="get-started">
+      <h1>Get early access today</h1>
+      <p>
+        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+        questions, our support team would be happy to help you.
+      </p>
+      <input type="email" id="email" name="email">
+      <a href="#" class="get-started-btn">Get Started For Free</a>
+    </section>
   </div>
 
-
-
-  Features
-  Team
-  Sign In
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
-
-  Get Started
-
-  Access your files, anywhere
-
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
-
-  Security you can trust
-
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
-
-  Real-time collaboration
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
-
-  Store any type of file
-
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
   <footer>
+    <img src="images/logo.svg" alt="logo">
+    <div class="footer-info">
+      <div class="footer-text">
+        <img src="images/icon-location.svg" alt="icon">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+          molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+          numquam
+        </p>
+      </div>
+      <div class="footer-contact">
+        <p>
+          <img src="images/icon-phone.svg" alt="icon-phone">
+          +1-543-123-4567
+        </p>
+        <p>
+          <img src="images/icon-email.svg" alt="icon-email">
+          example@fylo.com
+        </p>
+      </div>
+      <div class="footer-link-1">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+      <div class="footer-link-2">
+        <ul>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </div>
+      <div class="social-icon">
+        <a href="#" class="social-logo"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="social-logo"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="social-logo"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
