--- a/index.html
+++ b/index.html
@@ -27,26 +27,28 @@
           </ul>
         </nav>
       </div>
-
-      <div class="intro">
+    </section>
+    <section id="intro">
+      <div class="intro-body">
         <img src="images/illustration-intro.png" alt="presentation">
         <h2>All your files in one secure location, accessible anywhere.</h2>
         <p>  
           Fylo stores all your most important files in one secure location. Access them wherever 
           you need, share and collaborate with friends family, and co-workers.
         </p>
+        <div class="button">
+          <a href="#" class="btn">Get Started</a>
+        </div>
+        <div class="opt"></div>
       </div>
-      <div class="button">
-        <a href="#" class="btn">Get Started</a>
-      </div>
+
     </section>
 
     <!-- Features -->
-
-    <section class="features">
+    <section id="features">
       <div class="features-item">
         <img src="images/icon-access-anywhere.svg" alt="access-file">
-        <h2> Access your files, anywhere</h2>
+        <h3> Access your files, anywhere</h3>
         <p>
           The ability to use a smartphone, tablet, or computer to access your account means your 
           files follow you everywhere.
@@ -54,7 +56,7 @@
       </div>
       <div class="features-item">
         <img src="images/icon-security.svg" alt="icon">
-        <h2>Security you can trust</h2>
+        <h3>Security you can trust</h3>
         <p>
           2-factor authentication and user-controlled encryption are just a couple of the security 
           features we allow to help secure your files.
@@ -62,7 +64,7 @@
       </div>
       <div class="features-item">
         <img src="images/icon-collaboration.svg" alt="icon">
-        <h2>Real-time collaboration</h2>
+        <h3>Real-time collaboration</h3>
         <p>
           Securely share files and folders with friends, family and colleagues for live collaboration. 
           No email attachments required.        
@@ -70,7 +72,7 @@
       </div>
       <div class="features-item">
         <img src="images/icon-any-file.svg" alt="icon">
-        <h2>Store any type of file</h2>
+        <h3>Store any type of file</h3>
         <p>
           Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
           file types to be securely stored and shared.        
@@ -79,7 +81,7 @@
     </section>
 
     <!-- Fonctionnality -->
-    <section class="fonction">
+    <section id="fonction">
       <div class="fonction-item-1">
       <img src="images/illustration-stay-productive.png" alt="productive">
       </div>
@@ -87,20 +89,20 @@
         <h2>Stay productive, wherever you are </h2>
         <p>
           Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-          storage needs.<br>
-        
+          storage needs.</p>
+          <p>
           Securely share files and folders with friends, family and colleagues for live collaboration. No email 
           attachments required.
         </p>
-        <a href="#">See how Fylo works</a>
+        <a href="#">See how Fylo works <i class="fas fa-arrow-circle-right"></i></a>
       </div>
 
     </section>
 
     <!-- Testimonials -->
-    <section class="testimonials">
+    <section id="testimonials">
       <!-- Testimonials 1 -->
-      <div class="testimonials-1">
+      <div class="testimonials-item">
         <div class="testimonials-body">
           <p>
             Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
@@ -110,13 +112,13 @@
         <div class="profile">
           <img src="images/profile-1.jpg" alt="profile">
           <div class="profile-titre">
-            <h3>Satish Patel</h3>
+            <h5>Satish Patel</h5>
             <p>Founder & CEO, Huddle</p>
           </div>
         </div>
       </div>
       <!-- Testimonials 2 -->
-      <div class="testimonials-2">
+      <div class="testimonials-item">
         <div class="testimonials-body">
           <p>          
             Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
@@ -126,13 +128,13 @@
         <div class="profile">
           <img src="images/profile-2.jpg" alt="profile">
           <div class="profile-titre">
-            <h3>Bruce McKenzie</h3>
+            <h5>Bruce McKenzie</h5>
             <p>Founder & CEO, Huddle</p>
           </div>
         </div>
       </div>
       <!-- Testimonials 3 -->
-      <div class="testimonials-3">
+      <div class="testimonials-item">
         <div class="testimonials-body">
           <p>          
             Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
@@ -142,7 +144,7 @@
         <div class="profile">
           <img src="images/profile-3.jpg" alt="profile">
           <div class="profile-titre">
-            <h3>Iva Boyd</h3>
+            <h5>Iva Boyd</h5>
             <p>Founder & CEO, Huddle</p>
           </div>
         </div>
@@ -150,14 +152,14 @@
     
     </section>
     <!-- Get Started Section -->
-    <section class="get-started">
+    <section id="get-started">
       <h1>Get early access today</h1>
       <p>
         It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
         questions, our support team would be happy to help you.
       </p>
       <input type="email" id="email" name="email">
-      <a href="#" class="get-started-btn">Get Started For Free</a>
+      <a href="#" class="btn get-started-btn">Get Started For Free</a>
     </section>
   </div>
 
