--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </div>
 
   <footer>
-    <img src="images/logo.svg" alt="logo">
+    <img class="logo" src="images/logo.svg" alt="logo">
     <div class="footer-info">
       <div class="footer-text">
         <img src="images/icon-location.svg" alt="icon">
@@ -207,7 +207,7 @@
     </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Saliou Diop</a>.
     </p>
   </footer>
 </body>
