--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
         questions, our support team would be happy to help you.
       </p>
-      <input type="email" id="email" name="email">
-      <a href="#" class="btn get-started-btn">Get Started For Free</a>
+      <input type="email" class="email" name="email">
+      <a href="#" class="get-started-btn">Get Started For Free</a>
     </section>
   </div>
 
@@ -199,7 +199,7 @@
           <li><a href="#">Privacy</a></li>
         </ul>
       </div>
-      <div class="social-icon">
+      <div class="social-icon" style="margin: auto;">
         <a href="#" class="social-logo"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="social-logo"><i class="fab fa-twitter"></i></a>
         <a href="#" class="social-logo"><i class="fab fa-instagram"></i></a>
